--- a/samm/src/main/resources/application.properties
+++ b/samm/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=111111
 
 mybatis.type-aliases-package=com.samm.vo
 mybatis.mapper-locations=com/samm/mybatis/*.xml
+
+
+admindir = C:\\muticampus\\spring\\shopadmin\\src\\main\\resources\\static\\img\\
+userdir = C:\\muticampus\\spring\\shop\\src\\main\\resources\\static\\img\\
