--- a/samm/src/main/resources/application.properties
+++ b/samm/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.password=111111
 mybatis.type-aliases-package=com.samm.vo
 mybatis.mapper-locations=com/samm/mybatis/*.xml
 
-
+spring.servlet.multipart.max-file-size=10MB
 admindir = C:\\muticampus\\spring\\shopadmin\\src\\main\\resources\\static\\img\\
-userdir = C:\\muticampus\\spring\\shop\\src\\main\\resources\\static\\img\\
+testdir = C:\\multicampus finalproject\\samm\\samm\\src\\main\\resources\\static\\images\\festival\\
