--- a/samm/pom.xml
+++ b/samm/pom.xml
@@ -121,6 +121,14 @@
 			<version>3.3.7</version>
 		</dependency>
 		
+	<!-- Maven Repository: org.springframework.boot » spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.7.2</version>
+		</dependency>	
+		
+		
 	</dependencies>
 
 	<build>
