--- a/samm/src/main/resources/application.properties
+++ b/samm/src/main/resources/application.properties
@@ -12,3 +12,12 @@ mybatis.mapper-locations=com/samm/mybatis/*.xml
 spring.servlet.multipart.max-file-size=10MB
 admindir = C:\\muticampus\\spring\\shopadmin\\src\\main\\resources\\static\\img\\
 testdir = C:\\multicampus finalproject\\samm\\samm\\src\\main\\resources\\static\\images\\festival\\
+
+
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= sammfestival@gmail.com
+spring.mail.password= kdty kvxg miqg iztd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
