--- a/samm/src/main/resources/application.properties
+++ b/samm/src/main/resources/application.properties
@@ -11,7 +11,9 @@ mybatis.mapper-locations=com/samm/mybatis/*.xml
 
 spring.servlet.multipart.max-file-size=10MB
 admindir = C:\\muticampus\\spring\\shopadmin\\src\\main\\resources\\static\\img\\
-testdir = C:\\multicampus finalproject\\samm\\samm\\src\\main\\resources\\static\\images\\festival\\
+#testdir = C:\\multicampus finalproject\\samm\\samm\\src\\main\\resources\\static\\images\\festival\\
+testdir = /root/apache-tomcat-8.5.27/webapps/samm/WEB-INF/classes/static/images/festival/
+
 
 
 #mail
