--- a/samm/pom.xml
+++ b/samm/pom.xml
@@ -132,6 +132,14 @@
 		    <version>2.8.6</version>
 		</dependency>
 
+        <!-- commons-fileupload -->
+          <!-- multipart등을 사용할수 있음 -->
+          <dependency>
+              <groupId>commons-fileupload</groupId>
+              <artifactId>commons-fileupload</artifactId>
+              <version>1.3.1</version>
+          </dependency>
+			
 
 		<!-- Maven Repository: org.springframework.boot » spring-boot-starter-mail -->
 		<dependency>
